# Kipsoiwet

./: BTC_Polymarket_March29_Full.docx  INSTRUCTIONS_FOR_USE.md  Polymarket_Martingale_Instructions.docx  README.md  STRATEGY_IMPROVEMENTS.md  pyproject.toml
src/kipsoiwet_bot/: __init__.py  backtest.py  bot.py  config.py  day_sequence.py  martingale.py  polymarket.py  session_log.py
tests/: test_backtest.py  test_day_sequence.py  test_martingale.py  test_session_log.py
